2020-01-20         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-12-21         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-11-04         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-10-17         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-10-06         Arnold D. Robbins     <arnold@skeeve.com>

	* gawktexi.in: Updated.

2019-10-05         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
	* texinfo.tex: Updated.

2019-10-02         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
	* sidebar.awk: Updated.
	* texinfo.tex: Updated.

2019-09-24         Antonio Giovanni Colombo   <azc100@gmail.com>

	* texinfo.tex: Updated.

2019-08-12         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-08-07         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-07-22         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.
	* gawk.1: Updated.
	* texinfo.tex: Updated.

2019-07-08         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-06-21         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-06-18         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-06-18         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.0.1: Release tar ball made.

2019-06-06         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-05-12         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-04-27         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-04-18         Antonio Giovanni Colombo   <azc100@gmail.com>

	* gawktexi.in: Updated.

2019-04-12         Arnold D. Robbins     <arnold@skeeve.com>

	* 5.0.0: Release tar ball made.
