@@ -1,3 +1,7 @@
+2020-01-24         Antonio Giovanni Colombo   <azc100@gmail.com>
+
+	* gawktexi.in: Updated.
+
 2020-01-20         Antonio Giovanni Colombo   <azc100@gmail.com>
 
 	* gawktexi.in: Updated.
